--- a/CampusHub/Components/_Imports.razor
+++ b/CampusHub/Components/_Imports.razor
@@ -8,5 +8,5 @@
 @using Microsoft.JSInterop
 @using CampusHub
 @using CampusHub.Presentation.Components
-@using CampusHub.Application.DTOs
+@using CampusHub.Application.DTO
 @using CampusHub.Application.Services
